Fix spacing in header.

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -9,7 +9,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 h1 {
-  font-size: 2.5em;
+  font-size: 1.2em;
   letter-spacing: 1px;
   margin: 0 0 0 2.5em;
   padding: 0;
